memperbaiki bug scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,14 @@
   color: #000000;
   background: #e86100;
 }
+.hide-scrollbar {
+  /*FireFox*/
+  scrollbar-width: none;
+  /*IE10+*/
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
 ::-webkit-scrollbar {
+  /*Chrome, Safari, Edge*/
   display: none;
 }
 .azonix {
